--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <label for="" style="font-size: 20px; color: white; font-weight:bold;">Login as:</label>
             <select name="" id="" class="form-control" onchange="window.location.href=this.value;">
               <option value="#">Select</option>
-              <option value="supervisor-login.php">Supervisor</option>
+              <option value="supervisor-login.html">Supervisor</option>
               <option value="login.php">OJT Students</option>
             </select>
 				</div>
